# =============================================================================
# XSigma Bazel Configuration Settings
# =============================================================================
# Config settings for conditional compilation
# Equivalent to CMake option() and set() commands
# =============================================================================

package(default_visibility = ["//visibility:public"])

# Export the helper functions
exports_files(["xsigma.bzl"])

# =============================================================================
# Library Type Configuration
# =============================================================================

config_setting(
    name = "shared_libs",
    define_values = {"xsigma_build_shared_libs": "true"},
)

# =============================================================================
# GPU Backend Configuration
# =============================================================================

config_setting(
    name = "enable_cuda",
    define_values = {"xsigma_enable_cuda": "true"},
)

config_setting(
    name = "enable_hip",
    define_values = {"xsigma_enable_hip": "true"},
)

# =============================================================================
# Parallel Computing Configuration
# =============================================================================

config_setting(
    name = "enable_openmp",
    define_values = {"xsigma_enable_openmp": "true"},
)

config_setting(
    name = "enable_tbb",
    define_values = {"xsigma_enable_tbb": "true"},
)

# =============================================================================
# Math Library Configuration
# =============================================================================

config_setting(
    name = "enable_mkl",
    define_values = {"xsigma_enable_mkl": "true"},
)

# =============================================================================
# Memory Allocator Configuration
# =============================================================================

config_setting(
    name = "enable_mimalloc",
    define_values = {"xsigma_enable_mimalloc": "true"},
)

# =============================================================================
# Utility Library Configuration
# =============================================================================

config_setting(
    name = "enable_magic_enum",
    define_values = {"xsigma_enable_magic_enum": "true"},
)

# =============================================================================
# Profiling Configuration
# =============================================================================

config_setting(
    name = "enable_kineto",
    define_values = {"xsigma_enable_kineto": "true"},
)

config_setting(
    name = "enable_native_profiler",
    define_values = {"xsigma_profiler_type": "native"},
)

config_setting(
    name = "enable_itt",
    define_values = {"xsigma_enable_itt": "true"},
)

# =============================================================================
# Logging Backend Configuration
# =============================================================================

config_setting(
    name = "logging_glog",
    define_values = {"xsigma_logging_backend": "glog"},
)

config_setting(
    name = "logging_loguru",
    define_values = {"xsigma_logging_backend": "loguru"},
)

config_setting(
    name = "logging_native",
    define_values = {"xsigma_logging_backend": "native"},
)

# =============================================================================
# GPU Allocation Strategy
# =============================================================================

config_setting(
    name = "gpu_alloc_sync",
    define_values = {"xsigma_gpu_alloc": "sync"},
)

config_setting(
    name = "gpu_alloc_async",
    define_values = {"xsigma_gpu_alloc": "async"},
)

config_setting(
    name = "gpu_alloc_pool_async",
    define_values = {"xsigma_gpu_alloc": "pool_async"},
)

# =============================================================================
# Algorithm Configuration
# =============================================================================

config_setting(
    name = "lu_pivoting",
    define_values = {"xsigma_lu_pivoting": "true"},
)

config_setting(
    name = "sobol_1111",
    define_values = {"xsigma_sobol_1111": "true"},
)

# =============================================================================
# Testing Configuration
# =============================================================================

config_setting(
    name = "enable_gtest",
    define_values = {"xsigma_enable_gtest": "true"},
)

config_setting(
    name = "enable_benchmark",
    define_values = {"xsigma_enable_benchmark": "true"},
)
